<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar_customized"
                layout="@layout/toolbar_customized" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small"
                android:background="@drawable/card_view"
                android:orientation="vertical"
                android:padding="@dimen/big">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Insira a chave de acesso"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_class_code"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:hint="@string/hint_class_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_class_code"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@android:color/transparent"
                        android:paddingStart="@dimen/normal"
                        android:paddingEnd="@dimen/normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big"
                    android:text="Insira seu nome completo"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:hint="@string/hint_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_name"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@android:color/transparent"
                        android:paddingStart="@dimen/normal"
                        android:paddingEnd="@dimen/normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/big"
                    android:background="@drawable/card_view_clickable_blue"
                    android:paddingStart="@dimen/big"
                    android:paddingTop="@dimen/normal"
                    android:paddingEnd="@dimen/big"
                    android:paddingBottom="@dimen/normal"
                    android:text="@string/activity_login_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <WebView
                    android:id="@+id/teste"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/placeholder"
            layout="@layout/loading_placeholder"
            tools:visibility="gone" />
    </FrameLayout>
</layout>
