...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/normal"
                tools:context=".presentation.main.dashboard.DashboardActivity">

                <LinearLayout
                    android:id="@+id/card_view_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/card_view_clickable"
                    app:layout_constraintStart_toStartOf="parent"
...
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/notice" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_homework"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/card_view_clickable"
                    android:orientation="vertical"
...
