<resources>
    <string name="global_try_again">Tentar novamente</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_do_login">Fazer login</string>
    <string name="global_ok">OK</string>
    <string name="global_facebook">Facebook</string>
    <string name="global_google">Google</string>
    <string name="global_or">Ou</string>
...
